# practica_POO

./: .gitignore  CMakeList.txt  CMakeLists.txt  Evaluacion.cpp  Hogar.cpp  Huesped.cpp  Huesped.h  Main.cpp  Propietario.cpp  Propietario.h  README.md  Reserva.cpp  Reserva.h  Sistema.cpp  makefile  papu
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Evaluacion.cpp  Evaluacion.h  Hogar.cpp  Hogar.h  Huesped.cpp  Huesped.h  Propietario.cpp  Reserva.cpp  Sistema.cpp  Sistema.h  papu
